<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.SignupActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_signin_background">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/signin_text_size"
        android:layout_marginTop="@dimen/signin_text_margin_top"
        android:textColor="@color/dark_gray"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/signup_cardview_height"
        android:layout_marginTop="@dimen/signup_cardview_margin_top"
        android:layout_marginStart="@dimen/signup_cardview_margin_end_start"
        android:layout_marginEnd="@dimen/signup_cardview_margin_end_start"
        app:cardCornerRadius="@dimen/signup_cardview_radius"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_name"
                android:layout_marginTop="@dimen/signup_text_name_margin_top"
                android:layout_marginStart="@dimen/signup_text_name_margin_end_start"
                android:layout_marginEnd="@dimen/signup_text_name_margin_end_start">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_email"
                android:layout_marginTop="@dimen/signup_text_email_margin_top"
                android:layout_marginStart="@dimen/signup_text_email_margin_end_start"
                android:layout_marginEnd="@dimen/signup_text_email_margin_end_start">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/text_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_password"
                android:layout_marginTop="@dimen/signup_text_password_margin_top"
                android:layout_marginStart="@dimen/signup_text_password_margin_end_start"
                android:layout_marginEnd="@dimen/signup_text_password_margin_end_start">


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/text_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:backgroundTint="@null"
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signup_button_margin_top"
                android:layout_marginEnd="@dimen/signup_button_margin_end_start"
                android:layout_marginStart="@dimen/signup_button_margin_end_start"
                android:background="@drawable/btn"
                android:text="@string/signup_sign_up_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/signup_button_text_size"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>