<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.profileActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_signin_background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ProjmanagApp.AppBaroverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:background="@color/primary_color"
            app:popupTheme="@style/ProjmanagApp.popupoverlay"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:clickable="true"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/profile"
                android:focusable="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_name"
                android:layout_marginTop="@dimen/profile_text_name_margin_top"
                android:layout_marginStart="@dimen/profile_text_name_margin_end_start"
                android:layout_marginEnd="@dimen/profile_text_name_margin_end_start">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/profile_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_email"
                android:layout_marginTop="@dimen/profile_text_email_margin_top"
                android:layout_marginStart="@dimen/profile_text_email_margin_end_start"
                android:layout_marginEnd="@dimen/profile_text_email_margin_end_start">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/profile_text_email"
                    android:inputType="textEmailAddress"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_mobile"
                android:layout_marginTop="@dimen/profile_text_password_margin_top"
                android:layout_marginStart="@dimen/profile_text_password_margin_end_start"
                android:layout_marginEnd="@dimen/profile_text_password_margin_end_start">


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/profile_text_mobile"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:backgroundTint="@null"
                android:id="@+id/profil_update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_button_margin_top"
                android:layout_marginEnd="@dimen/profile_button_margin_end_start"
                android:layout_marginStart="@dimen/profile_button_margin_end_start"
                android:background="@drawable/btn"
                android:text="@string/profile_update"
                android:textColor="@color/white"
                android:textSize="@dimen/profile_button_text_size"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>